fix bug on IE11

--- a/app/less/modules/checkout.less
+++ b/app/less/modules/checkout.less
@@ -111,7 +111,7 @@
 			width: 50px;
 		}
 		.content {
-		 	flex: 1 0 0%;
+		 	width: calc(~"100% - 50px");
 		 	padding-left: 10px;
 		 	font-size: 16px;
 		 	span {
