--- a/app/less/modules/common.less
+++ b/app/less/modules/common.less
@@ -719,6 +719,7 @@
     font-size: 1.4rem;
     .time {
       color: #8B929F;
+      margin-left: auto;
     }
     &:last-child {
       padding-bottom: 0;
