--- a/app/less/modules/manage-shop.less
+++ b/app/less/modules/manage-shop.less
@@ -119,7 +119,6 @@
 	@media (min-width: 768px) {
 		display: flex;
 		border-bottom: 8px solid @yellow;
-		min-height: calc(~"100vh - 81px");
 	}
 
 	&__inner {
@@ -151,6 +150,7 @@
 			flex: 1 0 0%;
 			padding: 20px 20px 80px;
 			.font-size(16px);
+			min-height: calc(~"100vh - 89px");
 		}
 		@media (min-width: 992px) {
 			padding-bottom: 20px;
