--- a/app/less/modules/shop-management-plan-pricing.less
+++ b/app/less/modules/shop-management-plan-pricing.less
@@ -78,6 +78,7 @@
 	@media (min-width: 1200px) {
 		.item {
 			width: calc(~"100% / 3 - 10px");
+			margin: 0 0 10px;
 		}
 	}
 }
